# artifact

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
docs/: artifact-dd.md  create-dd.md  model-override-dd.md
docs/superpowers/plans/: 2026-04-21-model-override.md  2026-04-22-artifact-template-create.md
skills/artifact/: SKILL.md
skills/artifact-create/: SKILL.md
skills/artifact-create/evals/: evals.json
skills/artifact-run/: SKILL.md
skills/artifact-run/evals/: evals.json
skills/artifact-run/evals/fixtures/gemini-with-input/: ARTIFACT.md
skills/artifact/artifact-create/: SKILL.md
skills/artifact/artifact-create-plan-artifacts/: SKILL.md
skills/artifact/artifact-plan/: SKILL.md
skills/artifact/artifact-plan-artifacts/: SKILL.md
skills/artifact/evals/: evals.json
skills/artifact/examples/: README.md  bushwick-buy-vs-rent.md  car-search.md  passover-rain.md
src/artifact/: __init__.py  claude_cli.py  cli.py  create.py  errors.py  exec.py  introspect.py  promote.py  runner.py  spec.py  template.py  timestamp.py
tests/: conftest.py  test_claude_cli.py  test_cli.py  test_create.py  test_exec.py  test_exec_dispatch.py  test_introspect.py  test_promote.py  test_runner.py  test_spec.py  test_template.py  test_timestamp.py
tests/fixtures/trivial/: ARTIFACT.md
tests/fixtures/with-inputs/: ARTIFACT.md
tests/fixtures/with-params/: ARTIFACT.md
tests/integration/: test_cli_claude_cli.py  test_cli_model_override.py  test_deepagent_gemini.py
tests/integration/fixtures/claude-cli-with-input/: ARTIFACT.md
tests/integration/fixtures/trivial-claude-cli/: ARTIFACT.md
tests/integration/fixtures/trivial-gemini/: ARTIFACT.md
